--- a/.eslintrc
+++ b/.eslintrc
@@ -70,6 +70,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/button-has-type": "off",
     "react/no-danger": "off",
+    "react/jsx-curly-newline": "off",
     "react/require-default-props": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/label-has-for": "off",
