--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -8,6 +8,8 @@ target 'carauditapp' do
 
   use_react_native!(:path => '../../../node_modules/react-native')
 
+  pod 'react-native-image-picker', :path => '../../../node_modules/react-native-image-picker'
+
   target 'carauditappTests' do
     inherit! :complete
     # Pods for testing
