--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-image-picker": "3.1.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
