--- a/packages/server/ormconfig.example.json
+++ b/packages/server/ormconfig.example.json
@@ -6,15 +6,15 @@
     "port": 5432,
     "username": "postgres",
     "password": "docker",
-    "database": "realdata",
+    "database": "brasilcar",
     "entities": [
-      "dist/modules/**/infra/typeorm/entities/*.js"
+      "src/modules/**/infra/typeorm/entities/*.ts"
     ],
     "migrations": [
-      "dist/shared/infra/typeorm/migrations/*.js"
+      "src/shared/infra/typeorm/migrations/*.ts"
     ],
     "cli": {
-      "migrationsDir": "dist/shared/infra/typeorm/migrations"
+      "migrationsDir": "src/shared/infra/typeorm/migrations"
     }
   }
 ]
