--- a/.eslintrc
+++ b/.eslintrc
@@ -70,7 +70,6 @@
     "react/jsx-props-no-spreading": "off",
     "react/button-has-type": "off",
     "react/no-danger": "off",
-    "react/jsx-curly-newline": "off",
     "react/require-default-props": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/label-has-for": "off",
@@ -147,7 +146,8 @@
         "packageDir": [
           ".",
           "packages/server",
-          "packages/mobile"
+          "packages/mobile",
+          "packages/web"
         ]
       }
     ],
